# hyperlane-monorepo-tron

rust/: build.sh
rust/main/: Cargo.toml
rust/main/chains/hyperlane-tron/: Cargo.toml
rust/main/chains/hyperlane-tron/src/: address.rs  config.rs  error.rs  lib.rs  signer.rs
rust/main/chains/hyperlane-tron/src/contracts/: mailbox.rs  merkle_tree_hook.rs  mod.rs  utils.rs  validator_announce.rs
rust/main/chains/hyperlane-tron/src/rpc_client/: client.rs  mod.rs  provider.rs
rust/main/hyperlane-base/: Cargo.toml
rust/main/hyperlane-base/src/contract_sync/cursors/: mod.rs
rust/main/hyperlane-base/src/settings/: chains.rs  mod.rs  signers.rs
rust/main/hyperlane-base/src/settings/parser/: connection_parser.rs
rust/main/hyperlane-core/src/: chain.rs
rust/main/hyperlane-core/src/metrics/: agent.rs
typescript/sdk/: package.json
typescript/sdk/src/app/: MultiProtocolApp.ts
typescript/sdk/src/providers/: MultiProtocolProvider.ts  ProviderType.ts  providerBuilders.ts  transactionFeeEstimators.ts
typescript/sdk/src/token/: Token.ts  TokenStandard.ts  nativeTokenMetadata.ts
typescript/sdk/src/token/adapters/: ITokenAdapter.ts  TronTokenAdpter.ts
typescript/sdk/src/utils/: tron.ts
typescript/utils/src/: addresses.ts  index.ts  types.ts
